@@ -8,6 +8,8 @@
 - Copy/move/delete of saved desktop configurations implemented
 - SNMP walk function improved
 - Implemented "User must change password on next logon" function
+- UPS subagent: added support for BSMXCP protocol (used by Powerware,
+  HP and Compaq UPSes)
 - Fixed issues: #83, #84, #85, #88
 
 
